Correct phone link on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,8 @@ html {
 }
 
 /* Fonts and Sizes */
-a:link {
+a:link,
+li p a:link {
     text-decoration: none;
 }
 
